# django-plausible-proxy

./: .bumpversion.cfg  .darglint  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .pydocstyle  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml
plausible_proxy/: __init__.py  apps.py  services.py  urls.py  views.py
plausible_proxy/templatetags/: plausible.py
tests/: __init__.py  conftest.py  test_services.py  test_templatetags.py  test_views.py  urlconf.py
